--- a/src/core/static/sass/colors.scss
+++ b/src/core/static/sass/colors.scss
@@ -10,7 +10,7 @@ $color-3-primary: #43AA8B;
 $color-3-secondary: #000022;
 
 $color-4-primary: #DB504A;
-$color-4-secondary: #3C91E6;
+$color-4-secondary: #DBBEA1;
 
 
 //Backgrounds
@@ -87,6 +87,6 @@ $color-4-secondary: #3C91E6;
         filter: invert(8%) sepia(33%) saturate(2418%) hue-rotate(214deg) brightness(95%) contrast(121%);
     }
     &-s4{
-        filter: invert(49%) sepia(73%) saturate(1606%) hue-rotate(188deg) brightness(94%) contrast(91%);
+        filter: invert(89%) sepia(14%) saturate(782%) hue-rotate(329deg) brightness(89%) contrast(92%);
     }
 }
