--- a/src/core/static/sass/site.scss
+++ b/src/core/static/sass/site.scss
@@ -35,7 +35,6 @@ body {
         &.-animate {
 
             &-up {
-    
                 &-in {
                     transform: translateY(0);
                     animation: loaderElementSlideInUp 0.5s $animateEaseOutBack;
@@ -43,6 +42,17 @@ body {
                 &-out {
                     transform: translateY(-100%);
                     animation: loaderElementSlideOutUp 0.5s $animateEaseOutBack;
+                }
+            }
+
+            &-right {
+                &-in {
+                    transform: translateY(0);
+                    animation: loaderElementSlideInRight 0.5s $animateEaseOutBack;
+                }
+                &-out {
+                    transform: translateY(-100%);
+                    animation: loaderElementSlideOutRight 0.5s $animateEaseOutBack;
                 }
             }
         }
