--- a/src/core/static/sass/navbar.scss
+++ b/src/core/static/sass/navbar.scss
@@ -38,6 +38,10 @@
 
             .-menu {
                 transform: translateY(0);
+
+                &.-animate-in {
+                    animation: slideFromTop 0.6s $animateEaseInOutBack 0.2s;
+                }
             }
 
             .-topbar {
