--- a/src/core/templates/core/navbar.html
+++ b/src/core/templates/core/navbar.html
@@ -4,11 +4,11 @@
 <nav class="navbar -main flex -col -wrap {% if not no_shrink %}-shrunk{% endif %}" id="navbar">
     <div class="navbar -container -topbar flex -wrap">
         <div class="social -container p-1 fill-parent">
-            <a href="#">
+            <a href="https://github.com/pud1m">
                 <img class="social -icon {{icon_color}}" src="{% static 'img/icons/github.svg' %}">
                 <span class="social -text">/pud1m</span>
             </a>
-            <a href="#">
+            <a href="https://linkedin.com/in/thalles-sales/">
                 <img class="social -icon {{icon_color}}" src="{% static 'img/icons/linkedin.svg' %}">
                 <span class="social -text">/thalles-sales</span>
             </a>
