--- a/src/core/static/sass/navbar.scss
+++ b/src/core/static/sass/navbar.scss
@@ -29,6 +29,11 @@
             height: auto;
 
             div:first-of-type {
+
+                &.-animate-in {
+                    animation: fadeIn 0.6s $animateEaseInOutBack 0.2s;
+                }
+
                 justify-content: center;
 
                 @media only screen and (max-width: 768px) {
@@ -112,13 +117,28 @@
         
                 padding: 0.25rem 0;
                 align-items: center;
+                flex-flow: column;
                 display: flex;
-                justify-content: flex-end;
+                justify-content: center;
 
                 @media only screen and (max-width: 768px) {
                     position: absolute;
                     right: 3%;
                     top: 4%;
+                }
+
+                &:after {
+                    content: url('../img/menu-zigzag.svg');
+                    display: flex;
+                    width: 3rem;
+                    margin: 0 auto;
+                    height: auto;
+                    clip-path: inset(0 100% 0 0);
+                }
+        
+                &:hover::after {
+                    clip-path: inset(0 0 0 0);
+                    animation: menuItemHover 0.5s $animateEaseInOutExpo;
                 }
             }
 
