--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -7,7 +7,7 @@
     <head>
 
     {% block base-css %}
-        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800" rel="stylesheet">
         {% compress css %}
             <link type="text/x-scss" href="{% static 'sass/main.scss' %}" rel="stylesheet" media="screen">
